# albatross

./: .gitignore  README.md  pyproject.toml  requirements.txt
CG2/: build_velocity_hull.py  download_era5.py  download_era5_1h.py  download_era5_6h.py  ds_opportunity_map.py  era5_wind_interp.py  hjb_ivp_shooter.py  make_figures.py  make_velocity_potential_gif.py  migration_hamiltonian.py  migration_hamiltonian_theory.ipynb  plot_isocurves.py  requirements.txt  wind_map.py
albatross/: __init__.py  bird.py
albatross/macroscale/: __init__.py  hull.py  ivp_shooter.py  migration.py  simulation.py  wind.py
albatross/microscale/: __init__.py  container.py  ensemble.py  factory.py  solver.py
coarse_graining/: main.py  path_optimizer.py  potential_map.py  tacking_lookup.py  wind_field.py
data/: albatross.toml
macroscale/: derivative.py  download_era5.py  hull.py  integrator.py  realWind.py  seasonal_wind_maps.py  shooter.py  storage.py  system.py  utils.py  visualise.py  wind.py  wind_explorer.py
mesoscale/: symmetry_breaking.py  tacking_diagram.py  turning_arc.py  velocity_hull.py  vref_min_polar.py
microscale/: bird.py  convergence_study.py  ensemble.py  factory.py  minimum_turn.py  sachs_analysis.py  solver.py  wind_shear.py
polar/: albatross.py  convergence_sweep.py  cycle_times.ipynb  optimiser.py  polar.ipynb  test.py  trajectories.py  utils.py
refactor/: Untitled-1.py  min_vref_paths.py  notebook.ipynb  polar_sweep.py  tacking_diagram.py  tacking_diagram_plots.ipynb  test.py
sachs/: albatross.py  data.toml  script.ipynb  tuna.py
(+27 files in other folders)
